--- a/src/index.css
+++ b/src/index.css
@@ -136,6 +136,44 @@ body{
   font-size: 20px;
 }
 
+.bg-modal{
+  display: flex;
+  position: fixed;
+  z-index: 1;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.712);
+  top: 0px;
+  left: 0px;
+  width: 100vh;
+  height: 100vh;
+}
+
+.body-modal{
+  min-width: 400px;
+  min-height: 500px;
+  padding: 25px;
+}
+
+.card-button{
+  border: 3px solid black;
+  background-color: black;
+  color: white;
+  font-weight: 800;
+  letter-spacing: 4px;
+
+}
+
+.card-button:hover{
+  background-color: green;
+  color: white;
+}
+
+.close-button{
+  font-size: 25px;
+}
+
+
 @media (max-width:576px){
     .layout-taxichain, .nav-bar{
       font-size: smaller;
