--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ body{
 .img-nft{
   border: 2px solid black;
   border-radius: 15px;
+  width:100%;
 }
 
 .layout-taxichain{
@@ -83,6 +84,18 @@ body{
   overflow: auto;
 }
 
+.img-modal{
+  width: 400px;
+}
+
+.info-modal{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-weight: 900;
+  font-size: 20px;
+}
+
 .frames:hover{
   transform: scale(1.01);
   cursor: pointer;
@@ -105,6 +118,7 @@ body{
 
 .bg-container{
   min-height: 100vh;
+  width: 100%;
   background: linear-gradient(rgba(255, 153, 0, 0.644),rgba(14, 14, 15, 0.74)), url(../images/city.png);
   background-size: cover;
 }
@@ -145,11 +159,15 @@ body{
   background-color: rgba(0, 0, 0, 0.712);
   top: 0px;
   left: 0px;
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
 }
 
 .body-modal{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
   min-width: 400px;
   min-height: 500px;
   padding: 25px;
@@ -157,16 +175,24 @@ body{
 
 .card-button{
   border: 3px solid black;
-  background-color: black;
+  background-color: rgb(4, 73, 4);
   color: white;
   font-weight: 800;
   letter-spacing: 4px;
+  width: 500px;
+  font-size: 30px;
+  border-radius: 10px;
+}
 
+
+.img-modal{
+  width: 400px;
 }
 
 .card-button:hover{
-  background-color: green;
+  background-color: rgb(0, 122, 31);
   color: white;
+  box-shadow: inset 5px 5px 5px rgb(40, 83, 45), inset -4px -4px rgb(21, 63, 17);
 }
 
 .close-button{
