--- a/src/index.css
+++ b/src/index.css
@@ -242,6 +242,75 @@ body{
   font-size: 25px;
 }
 
+.parking-frames{
+  display: flex;
+  padding: 9px;
+  background-color: rgb(38, 29, 88);
+  border-radius: 15px;
+  transition: 0.3s;
+  overflow: auto;
+  border: 5px solid black;
+}
+
+.parking-img-nft{
+  width:100px;
+  border-radius: 10px;
+}
+
+.parking-bg-modal{
+  display: flex;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  top:0px;
+  left:0px;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.parking-body-modal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+}
+
+.parking-img-modal{
+  border: 4px solid black;
+  border-radius: 10px;
+}
+
+.sell-button{
+  background-color: rgba(255, 0, 0, 0.795);
+  color: white;
+  font-weight: 800;
+  letter-spacing: 4px;
+  width: 500px;
+  font-size: 30px;
+  border-radius: 10px;
+}
+.rent-button{
+  background-color: rgba(255, 145, 0, 0.795);
+  color: white;
+  font-weight: 800;
+  letter-spacing: 4px;
+  width: 500px;
+  font-size: 30px;
+  border-radius: 10px;
+}
+.drive-button{
+  background-color: rgba(114, 114, 114, 0.795);
+  color: white;
+  font-weight: 800;
+  letter-spacing: 4px;
+  width: 500px;
+  font-size: 30px;
+  border-radius: 10px;
+}
+
+
 
 @media (max-width:576px){
     .layout-taxichain, .nav-bar{
