--- a/src/index.css
+++ b/src/index.css
@@ -90,10 +90,6 @@ body{
   overflow: auto;
 }
 
-.img-modal{
-  width: 400px;
-}
-
 .info-modal{
   display: flex;
   flex-direction: column;
@@ -214,22 +210,18 @@ body{
   min-width: 400px;
   min-height: 500px;
   padding: 25px;
+  overflow: auto;
 }
 
 .card-button{
   border: 3px solid black;
-  background-color: rgb(4, 73, 4);
+  background-color: rgb(8, 105, 8);
   color: white;
   font-weight: 800;
   letter-spacing: 4px;
-  width: 500px;
-  font-size: 30px;
+  width: 300px;
+  font-size: 25px;
   border-radius: 10px;
-}
-
-
-.img-modal{
-  width: 400px;
 }
 
 .card-button:hover{
@@ -275,57 +267,36 @@ body{
     align-items: center;
     justify-content: center;
     padding: 15px;
+    max-height: 600px;
+    max-width: 400px;
 }
 
-.parking-img-modal{
-  border: 4px solid black;
+.img-modal-in{
+  width:200px;
   border-radius: 10px;
+  border: 2px solid black;
 }
 
-.sell-button{
-  background-color: rgba(255, 0, 0, 0.795);
+.img-modal-park{
+  width: 200px;
+  border-radius: 10px;
+  border: 2px solid black;
+}
+
+.parking-card-button{
   color: white;
   font-weight: 800;
   letter-spacing: 4px;
-  width: 500px;
-  font-size: 30px;
+  font-size: 25px;
   border-radius: 10px;
-}
-.rent-button{
-  background-color: rgba(255, 145, 0, 0.795);
-  color: white;
-  font-weight: 800;
-  letter-spacing: 4px;
-  width: 500px;
-  font-size: 30px;
-  border-radius: 10px;
-}
-.drive-button{
-  background-color: rgba(114, 114, 114, 0.795);
-  color: white;
-  font-weight: 800;
-  letter-spacing: 4px;
-  width: 500px;
-  font-size: 30px;
-  border-radius: 10px;
+  width: 300px;
+  max-width: 300px;
 }
 
 
-
-@media (max-width:576px){
-    .layout-taxichain, .nav-bar{
-      font-size: smaller;
+@media (max-width:305px){
+    .parking-card-button, .card-button{
+      font-size: 20px;
+      width: 250px;
     }    
-}
-
-@media (max-width:768px){
-  .layout-taxichain, .nav-bar{
-    font-size: 15px;
-  } 
-}
-
-@media (min-width:992px){
-  .layout-taxichain, .nav-bar{
-    font-size: 17px;
-  } 
 }
