--- a/src/index.css
+++ b/src/index.css
@@ -165,7 +165,7 @@ body{
   padding: 0px 20px;
   gap: 10px;
   height: 40px;
-  border-radius: 8px;
+  border-radius: 18px 8px;
   background-color: rgb(255, 166, 0);
   font-family: "Bodoni Moda SC", serif;
   font-optical-sizing: auto;
