--- a/src/index.css
+++ b/src/index.css
@@ -175,6 +175,7 @@ body{
   color: white;
   box-shadow: 3px 3px 4px rgba(255, 166, 0, 0.342);
   margin-right: 25px;
+  height: 43px;
 }
 
 .wallet-button:hover{
@@ -257,6 +258,7 @@ body{
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.5);
+  
 }
 
 .parking-body-modal{
@@ -267,6 +269,40 @@ body{
     padding: 15px;
     max-height: 600px;
     max-width: 400px;
+}
+
+/* secondary modal marketplace */
+.secondary-modal-bg{
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: rgba(143, 247, 139, 0.226);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  z-index: 2;
+}
+
+.secondary-modal-container{
+  padding: 40px;
+  font-size: 20px;
+  gap: 10px;
+}
+
+.secondary-modal-buttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.confirm, .cancel{
+  color: white;
+  font-weight: 700;
+  border-radius: 6px;
+  border: 3px solid black;
 }
 
 .img-modal-in{
