--- a/src/index.css
+++ b/src/index.css
@@ -328,8 +328,10 @@ body{
 }
 
 .home-container{
-  width: 100vh;
-  height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
+  background-size: cover;
+  background-attachment: fixed;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -340,6 +342,7 @@ body{
   border: 5px solid black;
   background: linear-gradient(to bottom, black, rgb(245, 173, 39));
   color: white;
+  width: 80%;
 }
 
 @media (max-width:305px){
